[gd_scene load_steps=7 format=3 uid="uid://dldic4ix1v6dq"]

[ext_resource type="Script" path="res://scripts/cell_editor.gd" id="1_8r8nk"]
[ext_resource type="Texture2D" uid="uid://c68a6k16yw0ik" path="res://sprites/blank.png" id="1_rs2qj"]
[ext_resource type="Resource" uid="uid://3snu8jifmoc6" path="res://resources/test_cell_type.tres" id="2_iejn3"]
[ext_resource type="StyleBox" uid="uid://c4higkyqc0n2f" path="res://styles/red_button.tres" id="3_i8emw"]
[ext_resource type="StyleBox" uid="uid://cpq2tagx7jlgd" path="res://styles/red_button_hover.tres" id="4_tjml0"]
[ext_resource type="StyleBox" uid="uid://v4drwcklu7l7" path="res://styles/red_button_pressed.tres" id="5_s0dm2"]

[node name="CellEditor" type="PanelContainer"]
offset_right = 558.0
offset_bottom = 201.0
size_flags_horizontal = 3
script = ExtResource("1_8r8nk")
type = ExtResource("2_iejn3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DeleteButton" type="Button" parent="MarginContainer/MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("3_i8emw")
theme_override_styles/hover = ExtResource("4_tjml0")
theme_override_styles/pressed = ExtResource("5_s0dm2")
text = " - "

[node name="PreviewContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="Preview" type="TextureRect" parent="MarginContainer/MainContainer/PreviewContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_rs2qj")
expand_mode = 2
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ColorSelect" type="ColorPickerButton" parent="MarginContainer/MainContainer/PreviewContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="DataContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameInput" type="LineEdit" parent="MarginContainer/MainContainer/DataContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name"
metadata/_edit_use_anchors_ = true

[node name="StateBackground" type="PanelContainer" parent="MarginContainer/MainContainer/DataContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StateMargins" type="MarginContainer" parent="MarginContainer/MainContainer/DataContainer/StateBackground"]
layout_mode = 2

[node name="StateContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins"]
layout_mode = 2

[node name="StateSelectionContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer"]
layout_mode = 2

[node name="RemoveButton" type="Button" parent="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer/StateSelectionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = " - "

[node name="StateSelect" type="OptionButton" parent="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer/StateSelectionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Select State..."
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/id = 1
popup/item_1/separator = true

[node name="StateNameInput" type="LineEdit" parent="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer/StateSelectionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AddButton" type="Button" parent="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer/StateSelectionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = " + "

[node name="StateEdit" type="TextEdit" parent="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "value_1
value_2
value_3
value_4"
editable = false

[connection signal="pressed" from="MarginContainer/MainContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="color_changed" from="MarginContainer/MainContainer/PreviewContainer/ColorSelect" to="." method="_on_color_select_color_changed"]
[connection signal="popup_closed" from="MarginContainer/MainContainer/PreviewContainer/ColorSelect" to="." method="_on_color_select_popup_closed"]
[connection signal="text_changed" from="MarginContainer/MainContainer/DataContainer/NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer/StateSelectionContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="item_selected" from="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer/StateSelectionContainer/StateSelect" to="." method="_on_state_select_item_selected"]
[connection signal="text_submitted" from="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer/StateSelectionContainer/StateNameInput" to="." method="_on_state_name_input_text_submitted"]
[connection signal="pressed" from="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer/StateSelectionContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="text_changed" from="MarginContainer/MainContainer/DataContainer/StateBackground/StateMargins/StateContainer/StateEdit" to="." method="_on_state_edit_text_changed"]
